2002-11-14  Eric Blake  <ebb9@email.byu.edu>

	* src/Makefile.in: Regenerate after fixing a bug in automake 1.7.1
	- see patch 371.

2002-11-12  Eric Blake  <ebb9@email.byu.edu>

	* configure.in: Modify version, update to autoconf 2.54 and
	friends.
	* src/m4/ac_cxx_bool.m4:
	* src/m4/ac_cxx_check_set_new_handler.m4:
	* src/m4/ac_cxx_const_cast.m4:
	* src/m4/ac_cxx_dynamic_cast.m4:
	* src/m4/ac_cxx_exceptions.m4:
	* src/m4/ac_cxx_explicit.m4:
	* src/m4/ac_cxx_have_std.m4:
	* src/m4/ac_cxx_member_constants.m4:
	* src/m4/ac_cxx_namespaces.m4:
	* src/m4/ac_cxx_reinterpret_cast.m4:
	* src/m4/ac_cxx_rtti.m4:
	* src/m4/ac_cxx_static_cast.m4: Update obsolete autoconf-isms.
	* COPYING:
	* INSTALL:
	* aclocal.m4:
	* config.guess:
	* config.sub:
	* configure:
	* depcomp:
	* install-sh:
	* missing:
	* mkinstalldirs:
	* Makefile.in:
	* doc/Makefile.in:
	* src/config.h.in:
	* src/Makefile.in: Regenerate.

2002-11-11  Eric Blake  <ebb9@email.byu.edu>

	* src/symbol.h (ContainingPackageName): New method.
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/control.cpp:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/expr.cpp:
	* src/init.cpp:
	* src/symbol.cpp:
	* src/system.cpp: Use the method.

2002-11-09  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (AppendString): String concatenation broken
	when using (int)char - bug 3363.
	* src/expr.cpp (ProcessAmbiguousName): Another case of
	placeholder_type assertion - bug 3359.

2002-11-09  Chris Dennis  <chris.dennis@invidi.com>

	* src/error.cpp (InitializeMessages): For loop variables (again).

2002-11-07  Eric Blake  <ebb9@email.byu.edu>

	* src/error.cpp (NotDot): Fix logic.

2002-11-06  Eric Blake  <ebb9@email.byu.edu>

	* src/error.h:
	* src/error.cpp (FILE_FILE_CONFLICT): Restore error I accidentally
	deleted in last patch.

2002-11-05  Elliott Hughes  <enh@acm.org>

	* src/error.cpp:
	* src/error.h: Massive rewrite. Use printf style strings and
	consolidate formatting into common routines. Improves output of